--- a/config/database.yml
+++ b/config/database.yml
@@ -1,6 +1,13 @@
 <% # Handle old behaviour of official mysql image %>
 <% user = ENV.key?("MYSQL_ROOT_PASSWORD") ? "root" : ENV["MYSQL_USER"] %>
 <% password = ENV.key?("MYSQL_ROOT_PASSWORD") ? ENV["MYSQL_ROOT_PASSWORD"] : ENV["MYSQL_PASSWORD"] %>
+
+<% user     = ENV.key?("RDS_ENDPOINT_ADDRESS") ? ENV["RDS_MASTER_USERNAME"] %>
+<% password = ENV.key?("RDS_ENDPOINT_ADDRESS") ? ENV["RDS_MASTER_USER_PASSWORD"] %>
+<% host     = ENV.key?("RDS_ENDPOINT_ADDRESS") ? ENV["RDS_ENDPOINT_ADDRESS"] %>
+<% port     = ENV.key?("RDS_ENDPOINT_ADDRESS") ? ENV["RDS_PORT"] %>
+<% database = ENV.key?("RDS_ENDPOINT_ADDRESS") ? ENV["RDS_DB_NAME"] %>
+
 development:
   adapter: mysql2
   database: <%= ENV["MYSQL_DATABASE"] %>
